docs(README/demo): mention `Groupable!`, add links

--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <meta name="description" content="Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable!" />
+    <meta name="description" content="Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable! Groupable!" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable!">
+    <meta property="og:title" content="Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable! Groupable!">
     <meta property="og:url" content="https://vue-moveable.netlify.com">
     <meta property="og:image" content="http://daybrush.com/moveable/images/moveable1920x1080.png">
-    <meta property="og:description" content="Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable!">
+    <meta property="og:description" content="Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable! Groupable!">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable!">
+    <meta name="twitter:title" content="Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable! Groupable!">
     <meta name="twitter:url" content="https://vue-moveable.netlify.com">
     <meta name="twitter:image" content="http://daybrush.com/moveable/images/moveable1920x1080.png">
-    <meta name="twitter:description" content="Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable!">
+    <meta name="twitter:description" content="Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable! Groupable!">
     <meta name="theme-color" content="#f5f5f5">
-    <title>Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable!</title>
+    <title>Vue Moveable is Draggable! Resizable! Scalable! Rotatable! Warpable! Groupable!</title>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   </head>
   <body>
